fix: backward text selection doesn't trigger horizontal scroll Please test :)

This fix is more correct than the patch attached in bug #106571 in comment #12.
Note: In trunk, this bug does not exist.

BUG: 106571

svn path=/branches/KDE/3.5/kdelibs/; revision=558895